   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.43
 ============

 Released on 

 New features and improvements:

   - Reconciliation: let the user select displayed columns (todo #887).
   - Settlement: let the user select displayed columns.

 Bug fixes:

   - GuidedInput: fix the width of entries (todo #868).

 Other changes:

   - ofaIFilePeriod: new exercice management interface.
   - ofaFileDir: new class for dossiers collection management.
   - ofaDossierId: new class which implements ofaIFileId interface.
   - ofaIFileId: new dossier meta properties management interface.
   - myFileMonitor: new class.
   - mySettings: new class.
   - ofa-entry-columns.{c,h}: removed obsolete files.
   - ofa-reconcil-columns.{c,h}: removed obsolete files.
   - ofaIColumns: removed obsolete interface.
   - ofaITreeviewColumn: new interface.
   - ofaITreeviewDisplay: new interface.
   - ofaReconciliation class is renamed to ofaReconcilPage.

-----------------------------------------------------------------------
 Version 0.42
 ============

 Released on 2015-11-12

 New features and improvements:

   - 'install-txz' target let the user build a locally installable tarball.

-----------------------------------------------------------------------
 Version 0.41
 ============

 Released on 2015-11-11

 New features and improvements:

   - Reconciliation: update buttons after actions are done (todo #883).
   - Reconciliation: display bat lines reconciliation date and identifier.
   - Reconciliation: review display on conciliation groups (todo #877).
   - ViewEntries: ask for a confirmation when deleting a settled
                  or conciliated entry (todo #875).

 Bug fixes:

   - GuidedInput: review the layout of the UI (todo #882).
   - Reconciliation: fix missing leading space (todo #881).
   - Reconciliation: fix rounding computation (todo #876).
   - Reconciliation: fix account label style (todo #871).