@@ -30,6 +30,7 @@
 
  Other changes:
 
+   - ofaDossierPeriod: new class which implements ofaIFilePeriod interface.
    - ofaIFilePeriod: new exercice management interface.
    - ofaFileDir: new class for dossiers collection management.
    - ofaDossierId: new class which implements ofaIFileId interface.
